Fri Oct  3 13:43:18 1997  Ovidiu Predescu <ovidiu@net-community.com>

	* Added support for linking with different types of a library,
	depending on the flags you specify at the make time.
	* which_lib.c: New file.
	* config.h.in: New file.
	* Makefile.in: Added rule to build and install the which_lib program.
	* common.make: Added definition for WHICH_LIB_SCRIPT.
	* rules.make: Added rules to process the libraries list and obtain a
	new one based upon the debug, profile and shared variables.
	* configure.in: Added checks for various header files needed to compile
	the which_lib program.
	* library.make: Added new variable LIBRARY_FILE_EXT.

	* application.make: Replaced foreach with :.something=.someotherthing.
	* bundle.make: Likewise.
	* test.make: Likewise.
	* tool.make: Likewise.

	* config.make.in: Changed the hard-coded definition of ld to be $(CC).
	Added definitions for INSTALL programs.
	* configure.in: Added check for the INSTALL program.
	* library.make: New target internal-distclean.
	* rules.make: internal-distclean does not make first the clean target.
	* target.make: Shared libraries under OS 4.x have the .so extension.

Thu Oct  2 14:56:08 1997  Scott Christley  <scottc@stetson.net-community.com>

	* ld_lib_path.sh: New file.
	* common.make: Add variables which define explicit paths to the
	system, local, and user library directories.
	* rules.make (ALL_LD_LIB_DIRS): Variable which specifies the
	standard GNUstep and the user's specific directories of where
	the dynamic loader can find shared libraries.
	* target.make (LD_LIB_PATH): Call shell script which returns the
	name of the environment variable used by the dynamic loader.
	* test.make: Set the dynamic loader environment variable
	when running tests.

	* test.make: New file.
	* rules.make: Add test building and check rules.
	* Makefile.in: Install test.make.

Thu Oct  2 10:21:41 1997  Ovidiu Predescu <ovidiu@net-community.com>
