@@ -45,7 +45,7 @@ RANLIB = @RANLIB@
 RC = @RC@
 DLLTOOL = @DLLTOOL@
 
-INSTALL		= @INSTALL@
+INSTALL		= @HOST_INSTALL@
 INSTALL_PROGRAM	= @INSTALL_PROGRAM@
 INSTALL_DATA	= @INSTALL_DATA@
 
