@@ -43,7 +43,18 @@ AC_CANONICAL_SYSTEM
 AC_PROG_CC
 AC_PROG_CPP
 AC_PROG_RANLIB
+
 AC_PROG_INSTALL
+# HOST_INSTALL is the name of the install program in config.make so set it up
+# to point to the install-sh script in the GNUstep tree if no system install is
+# found.
+AC_SUBST(HOST_INSTALL)
+if test "$INSTALL" = "$ac_install_sh"; then
+  HOST_INSTALL=$prefix/Makefiles/$INSTALL
+else
+  HOST_INSTALL=$INSTALL
+fi
+
 AC_LN_S
 
 #--------------------------------------------------------------------
